finishes first pass on UX improvements/bug squashing

--- a/src/components/Planner/PlanSelector/PlanSelector.module.scss
+++ b/src/components/Planner/PlanSelector/PlanSelector.module.scss
@@ -6,5 +6,6 @@
 
   select {
     display: block;
+    height: 2rem;
   }
 }
