--- a/src/components/Planner/WeekDisplay/WeekDisplay.module.scss
+++ b/src/components/Planner/WeekDisplay/WeekDisplay.module.scss
@@ -2,19 +2,39 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 5rem;
+}
+
+.Header {
+  display: flex;
+  justify-content: space-around;
+  width: 100vw;
+  margin-bottom: -2rem;
+}
+
+.Title {
+  display: flex;
+  flex-direction: column;
+}
+
+.Form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .NameForm {
   margin: 1rem auto;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 40%;
 
-  input {
+  input,
+  select {
     height: 2rem;
     padding: 0;
-    width: 200px;
   }
 
   button {
